--- a/news-feed-welcome.html
+++ b/news-feed-welcome.html
@@ -42,18 +42,18 @@
         </div>
         <ul>
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"><i class="fab fa-bandcamp me-3"></i>Discover</a>
+                <a class="nav-link active" aria-current="page" href="discover.html"><i class="fab fa-bandcamp me-3"></i>Discover</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fas fa-trophy me-3"></i>Contests</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-briefcase me-3"></i>Jobs</a>
+                <a class="nav-link" href="browse-contest.html"><i class="fas fa-trophy me-3"></i>Contests</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-plus-square me-3"></i>Post Project</a>
+                <a class="nav-link" href="find-jobs.html" tabindex="-1" aria-disabled="true"><i class="fas fa-briefcase me-3"></i>Jobs</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" href="top-freelancers.html" tabindex="-1" aria-disabled="true"><i class="fas fa-plus-square me-3"></i>Post Project</a>
             </li>
         </ul>
 
@@ -78,29 +78,158 @@
             <div class="collapse navbar-collapse mx-4" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-white">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><i class="fab fa-bandcamp"></i>Discover</a>
+                        <a class="nav-link active" aria-current="page" href="discover.html"><i class="fab fa-bandcamp"></i>Discover</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="browse-contest.html"><i class="fas fa-trophy"></i>Contests</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><i class="fas fa-briefcase"></i>Jobs</a>
+                        <a class="nav-link" href="find-jobs.html" tabindex="-1" aria-disabled="true"><i class="fas fa-briefcase"></i>Jobs</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center">
                     <a class="text-white mx-3" href="top-freelancers.html"><i class="fas fa-crown"></i></a>
 
+
                     <div class="search-box">
-                        <input type="text" class="search-box-input" placeholder="What are you looking for ?">
-                        <button class="search-box-btn">
-                          <i class="search-box-icon material-icons">search</i>
-                        </button>
+                        <label><input type="text" id="search-bar"><span class="search-icon"></span></label>
                     </div>
-                    <a class="text-white mx-3 search-box" href=""><i class="fas fa-search"></i></a>
-                    <a class="text-white mx-3 position-relative" href=""><i class="fas fa-comment"></i>
-                        <span class="position-absolute top-0 start-100 translate-middle badge border border-primary rounded-circle bg-primary p-1"><span class="visually-hidden">unread messages</span></span>
-                    </a>
+
+
+                    <div class="dropdown notification-dropdown">
+                        <a class="text-white mx-3 position-relative" href=""><i class="fas fa-comment"></i>
+                            <span class="position-absolute top-0 start-100 translate-middle badge border border-primary rounded-circle bg-primary p-1"><span class="visually-hidden">unread messages</span></span>
+                        </a>
+
+
+
+
+
+                        <ul class="dropdown-menu shadow-cust notification-outer p-2 border-0" aria-labelledby="dropdownMenuLink">
+                            <div class="1">
+                                <div class="col-md-12 notification-title p-3 pb-0">
+                                    <h6>RECENT MESSAGES</h6>
+                                    <hr>
+                                </div>
+                                <div class="col-md-12 notification-wraper">
+                                    <div class="message-inner">
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                                <img src="assets/img/avatar.jpg" class="small-avatar-image rounded" alt="">
+
+                                            </div>
+                                            <div class="col-md-11">
+                                                <a href="#" class="text-dark">
+                                                    <h6 class="mx-4">Bettina J. @bettina2025</h6>
+
+                                                    <h6 class="mx-4">How are you? long day no see.</h6>
+                                                    <h6 class="mx-4 text-muted">1 min ago</h6>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div class="message-inner">
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                                <img src="assets/img/avatar.jpg" class="small-avatar-image rounded" alt="">
+
+                                            </div>
+                                            <div class="col-md-11">
+                                                <a href="#" class="text-dark">
+                                                    <h6 class="mx-4">Bettina J. @bettina2025</h6>
+
+                                                    <h6 class="mx-4">How are you? long day no see.</h6>
+                                                    <h6 class="mx-4 text-muted">1 min ago</h6>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div class="message-inner">
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                                <img src="assets/img/avatar.jpg" class="small-avatar-image rounded" alt="">
+
+                                            </div>
+                                            <div class="col-md-11">
+                                                <a href="#" class="text-dark">
+                                                    <h6 class="mx-4">Bettina J. @bettina2025</h6>
+
+                                                    <h6 class="mx-4">How are you? long day no see.</h6>
+                                                    <h6 class="mx-4 text-muted">1 min ago</h6>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div class="message-inner">
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                                <img src="assets/img/avatar.jpg" class="small-avatar-image rounded" alt="">
+
+                                            </div>
+                                            <div class="col-md-11">
+                                                <a href="#" class="text-dark">
+                                                    <h6 class="mx-4">Bettina J. @bettina2025</h6>
+
+                                                    <h6 class="mx-4">How are you? long day no see.</h6>
+                                                    <h6 class="mx-4 text-muted">1 min ago</h6>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div class="message-inner">
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                                <img src="assets/img/avatar.jpg" class="small-avatar-image rounded" alt="">
+
+                                            </div>
+                                            <div class="col-md-11">
+                                                <a href="#" class="text-dark">
+                                                    <h6 class="mx-4">Bettina J. @bettina2025</h6>
+
+                                                    <h6 class="mx-4">How are you? long day no see.</h6>
+                                                    <h6 class="mx-4 text-muted">1 min ago</h6>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <div class="message-inner">
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                                <img src="assets/img/avatar.jpg" class="small-avatar-image rounded" alt="">
+
+                                            </div>
+                                            <div class="col-md-11">
+                                                <a href="#" class="text-dark">
+                                                    <h6 class="mx-4">Bettina J. @bettina2025</h6>
+
+                                                    <h6 class="mx-4">How are you? long day no see.</h6>
+                                                    <h6 class="mx-4 text-muted">1 min ago</h6>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <hr>
+                                </div>
+                            </div>
+                        </ul>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
                     <div class="dropdown notification-dropdown">
                         <a class="text-white mx-3 " href="" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-bell"></i></a>
 
@@ -167,6 +296,8 @@
 
 
                     </div>
+
+
                     <div class="dropdown user-dropdown">
 
                         <img src="assets/img/profile-avatar.png" class="small-avatar-image rounded shadow-cust ms-3 dropdown-toggle" alt="" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -422,27 +553,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/script.min.js?h=107149a5a76976f881b165a9c43ae6c5"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></script>
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle=search-form]').click(function() {
-                $('.search-form-wrapper').toggleClass('open');
-                $('.search-form-wrapper .search').focus();
-                $('html').toggleClass('search-form-open');
-            });
-            $('[data-toggle=search-form-close]').click(function() {
-                $('.search-form-wrapper').removeClass('open');
-                $('html').removeClass('search-form-open');
-            });
-            $('.search-form-wrapper .search').keypress(function(event) {
-                if ($(this).val() == "Search") $(this).val("");
-            });
 
-            $('.search-close').click(function(event) {
-                $('.search-form-wrapper').removeClass('open');
-                $('html').removeClass('search-form-open');
-            });
-        });
-    </script>
 </body>
 
 </html>
